k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: campus-shop
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/items
            pathType: Prefix
            backend:
              service:
                name: items-service
                port:
                  number: 80
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /api/bids
            pathType: Prefix
            backend:
              service:
                name: bidding-service
                port:
                  number: 80
          - path: /api/notifications
            pathType: Prefix
            backend:
              service:
                name: notifications-service
                port:
                  number: 80
          - path: /api/profiles
            pathType: Prefix
            backend:
              service:
                name: profile-service
                port:
                  number: 80
